# amazon-price-tracker

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  simulate_demo.py
src/: __init__.py  __main__.py  cli.py  exporter.py  http_client.py  parser.py  scraper.py
