[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-price-tracker"
version = "0.1.0"
description = "Real-time Amazon product price & review tracking with automated Excel reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "meifumarket"}
]
keywords = ["amazon", "scraper", "price-tracking", "ecommerce", "competitor-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "playwright>=1.40.0",
]

[project.scripts]
amazon-price-tracker = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
